tests/errors/surf_sw_04.ki
# a non-scalar (list) case label is rejected
switch 1:
    case [1]:
        discard 1
